--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "restsecurity",
   "version": "1.0.0",
   "description": "",
-  "main": "example.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +19,6 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
-    "typescript": "^5.7.0"
+    "typescript": "^5.9.3"
   }
 }
